# concourse-dnf-resource

./: Dockerfile  Makefile  README.md  pyproject.toml
ci/: pipeline.yaml
concourse_dnf/: cli.py
tests/: test_concourse_dnf.py
